--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "babel-jest": "^26.6.3"
+    "babel-jest": "^26.6.3",
+    "lodash": "^4.17.20"
   }
 }
